# get_next_line_42

./: .gitignore  CMakeLists.txt
includes/: get_next_line.h
libs/libft/: CMakeLists.txt  Makefile  ft_lstadd.c  ft_lstiter.c  ft_lstnew.c  ft_lstrev.c  ft_strequ.c  ft_strsplit.c  libft.h
samples/: hello.txt  large_file.txt  sample.txt  sample2.txt
src/: get_next_line.c  get_next_line.c.bak  get_next_line.c.final  get_next_line.c.final2  get_next_line.c.final3  get_next_line.c.gitub  get_next_line.c.orig  get_next_line.c.strsplit  main.c
